src/components/Account/AccountMobile.module.css
.accountMobile {
  position: relative;

  height: 90vh;
  width: 100vw;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  padding-bottom: 20px;
  border: 1px solid red;
}

.accountMobileContent {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  margin: 0 auto;

  height: 70%;
  width: 80%;

  background-image: linear-gradient(to bottom, #2e2e34, #1e1e222d);
  backdrop-filter: blur(3px);
  border-radius: 10px;
  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.39);
  border: 1px solid rgba(255, 255, 255, 0.219);
}

